@@ -116,13 +116,13 @@ anytime(c(NA, NaN, Inf, as.numeric(as.POSIXct("2016-09-01 10:11:12"))))
 
 anytime(c("20160911", "20160911 1011", "20160911 101112", "20160911 101112.345678"))
 
-anytime("NA") 			# String NA
-anytime(Sys.time())                 # POSIXt pass-through
-utctime(Sys.time())                 # POSIXt pass-through (doesn't do anything different for numeric input)
-anydate(Sys.Date())			# Date pass-through
-utcdate(Sys.Date())                 # Date pass-through
-anytime(Sys.Date())                 # oddball
-utctime(Sys.Date())                 # oddball, same result, tz does not enter
+anytime("NA")       # String NA
+anytime(Sys.time()) # POSIXt pass-through
+utctime(Sys.time()) # POSIXt pass-through (doesn't do anything different for numeric input)
+anydate(Sys.Date()) # Date pass-through
+utcdate(Sys.Date()) # Date pass-through
+anytime(Sys.Date()) # oddball
+utctime(Sys.Date()) # oddball, same result, tz does not enter
 
 anydate(20160901)
 utcdate(20160901)
